--- a/g/gl/glu/glu.com.html
+++ b/g/gl/glu/glu.com.html
@@ -1,82 +1,82 @@
-<!--The following is the downloaded HTML source of the glu.com privacy policy that was archived on 2005-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051119111645id_/http%3A//www.glu.com/about/privacy_policy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the glu.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615052759id_/http%3A//glu.com/about/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 		<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 		<meta name="robots" content="all, index, follow">
 		<meta name="description" content="get glu'd to mobile entertainment">
 		<meta name="keywords" content="mobile, cellphone, games, ringtones, wallpapers, media">
-		<title>glu | about | privacy policy</title>
+		<title>glu mobile | about | privacy policy</title>
 		<link rel="SHORTCUT ICON" href="/favicon.ico"> 
 		<link rel="stylesheet" type="text/css" href="/include/glu.css" media="screen">
 		<script language="javascript" type="text/javascript" src="/include/glu.js"></script>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-125657-1";
-urchinTracker();
-</script>
 	</head>
     <body style="background: #ffffff url(/img/header/bg_glu.gif) no-repeat" text="#404040" link="#000000" vlink="#404040">
     	<a name="top">
-	
+		
     	<!-- Being Header -->
 		<table width="930" border="0" cellspacing="0" cellpadding="0" id="header">
 			<tbody><tr align="left" valign="top">
-				<td width="115" rowspan="3"><a href="/"><img src="/img/spacer.gif" width="105" height="80" alt="" border="0" hspace="0" vspace="0" align="left" style="margin-top: 20px; margin-left: 10px;"></a></td>
-				<td align="right" valign="middle" width="800" class="white"><a href="/index.jsp" class="topnav">home</a> | <a href="/support" class="topnav">support</a> | <a href="/about/" class="topnav">about</a> | <a href="/about/contact_us.jsp" class="topnav">contact</a></td>
-				<td width="15"><img src="/img/spacer.gif" width="15" height="31" alt="" border="0" hspace="0" vspace="0" align="right"></td>
+				<td width="115" rowspan="3"><a href="/index2.php" title="glu homepage"><img src="/img/spacer.gif" width="105" height="80" alt="Glu mobile homepage" border="0" hspace="0" vspace="0" align="left" style="margin-top: 20px; margin-left: 10px;"></a></td>
+				<td align="right" valign="middle" width="800" class="white">
+					<a href="/index2.php" class="topnav">home</a> | 
+					<a href="/support/index.php" class="topnav">support</a> | 
+					<a href="/about/index.php" class="topnav" title="About glu - management, press and jobs">about</a> | 
+					<a href="/about/contact_us.php" class="topnav">contact</a>
+				</td>
+				<td width="15"><img src="/img/spacer.gif" width="15" height="31" alt=" " border="0" hspace="0" vspace="0" align="right"></td>
 			</tr>
 			<tr align="left" valign="top">
 				<td colspan="2">
 					<table border="0" cellspacing="0" cellpadding="0">
 						<tbody><tr align="left" valign="top">
-							<td width="121"><img src="/img/spacer.gif" width="121" height="36" alt="" border="0" hspace="0" vspace="0" align="left"></td>
-							<td width="120"><div id="glugames"><a href="/games/"><img src="/img/spacer.gif" alt="" width="120" height="36" hspace="0" vspace="0" border="0" align="left"></a></div></td>
-							<td width="11"><img src="/img/header/line.gif" width="11" height="36" alt="" border="0" hspace="0" vspace="0" align="left"></td>
-							<td width="122"><div id="gluscreens"><a href="/screens/"><img src="/img/spacer.gif" alt="" width="122" height="36" hspace="0" vspace="0" border="0" align="left"></a></div></td>
-							<td width="11"><img src="/img/header/line.gif" width="11" height="36" alt="" border="0" hspace="0" vspace="0" align="left"></td>
-							<td width="103"><div id="glutones"><a href="/tones/"><img src="/img/spacer.gif" alt="" width="103" height="36" hspace="0" vspace="0" border="0" align="left"></a></div></td>
-							<td width="11"><img src="/img/header/line.gif" width="11" height="36" alt="" border="0" hspace="0" vspace="0" align="left"></td>
-							<td width="96"><div id="gluapps"><a href="/apps/"><img src="/img/spacer.gif" alt="" width="96" height="36" hspace="0" vspace="0" border="0" align="left"></a></div></td>
+							<td width="121"><img src="/img/spacer.gif" width="121" height="36" alt=" " border="0" hspace="0" vspace="0" align="left"></td>
+							<td width="120"><div id="glugames"><a href="/games/" title="mobile games catalogue"><img src="/img/spacer.gif" alt="glu games" width="120" height="36" hspace="0" vspace="0" border="0" align="left"></a></div></td>
+							<td width="11"><img src="/img/header/line.gif" width="11" height="36" alt="|" border="0" hspace="0" vspace="0" align="left"></td>
+							<td width="122"><div id="gluscreens"><a href="/screens/" title="mobile wallpapers, screensavers, themes and mms"><img src="/img/spacer.gif" alt="glu screens" width="122" height="36" hspace="0" vspace="0" border="0" align="left"></a></div></td>
+							<td width="11"><img src="/img/header/line.gif" width="11" height="36" alt="|" border="0" hspace="0" vspace="0" align="left"></td>
+							<td width="103"><div id="glutones"><a href="/tones/" title="mobile ringtones, voicetones and truetones"><img src="/img/spacer.gif" alt="glu tones" width="103" height="36" hspace="0" vspace="0" border="0" align="left"></a></div></td>
+							<td width="11"><img src="/img/header/line.gif" width="11" height="36" alt="|" border="0" hspace="0" vspace="0" align="left"></td>
+							<td width="96"><div id="gluapps"><a href="/apps/" title="mobile applications"><img src="/img/spacer.gif" alt="glu apps" width="96" height="36" hspace="0" vspace="0" border="0" align="left"></a></div></td>
 						</tr>
 					</tbody></table>
 				</td>
 			</tr>
 			<tr align="left" valign="top">
-				<td colspan="2"><img src="/img/spacer.gif" width="815" height="103" alt="" border="0" hspace="0" vspace="0" align="left"></td>
+				<td colspan="2"><img src="/img/spacer.gif" width="815" height="103" alt="get glu'd to mobile entertainment" border="0" hspace="0" vspace="0" align="left"></td>
 			</tr>
 		</tbody></table>
 		<!-- End Header -->
-
 		<!-- Begin Content -->
+
 <table border="0" width="915" cellspacing="0" cellpadding="0" id="content">
 	<tbody><tr align="left" valign="top">
 		<!-- Begin Left Column -->
 		<td width="185" id="leftcolumn">
 			<table border="0" width="185" cellspacing="0" cellpadding="0" class="bottomspacer">
 	<tbody><tr align="left" valign="top">
-		<td class="boxtop_short_short_trans boxtop"><a href="/about/" class="boxtoplink"><span class="yellow">about</span></a></td>
+		<td class="boxtop_short_short_trans boxtop"><a href="../about/" class="boxtoplink"><span class="yellow">about</span></a></td>
 	</tr>
 	<tr align="left" valign="top">
 		<td class="boxmiddle_short_short">
 			<div style="padding: 5px 15px 0px 20px;">
 				<ul class="ulbox">
-					<li class="libox yellow"><a href="/about/management.jsp" class="hoverlink">management</a></li>		
-					<li class="libox yellow"><a href="/about/investors.jsp" class="hoverlink">investors</a></li>
-					<li class="libox yellow"><a href="/about/jobs/" class="hoverlink">jobs</a></li>
-					<li class="libox yellow"><a href="/about/contact_us.jsp" class="hoverlink">contact us</a></li>
-					<li class="libox yellow"><a href="http://extranet.glu.com/msgames/" class="hoverlink">extranet (EMEA)</a></li>
-					<li class="libox yellow"><a href="http://extranet.glu.com/msgames/" class="hoverlink">extranet (APAC)</a></li>
-					<li class="libox yellow"><a href="/about/press_room/" class="hoverlink">press room</a></li>
+					<li class="libox yellow"><a href="/about/management.php" class="hoverlink">management</a></li>		
+					<li class="libox yellow"><a href="/about/investors.php" class="hoverlink">investors</a></li>
+					<li class="libox yellow"><a href="/about/vacancies.php" class="hoverlink">jobs</a></li>
+					<li class="libox yellow"><a href="/about/contact_us.php" class="hoverlink">contact us</a></li>
+					<li class="libox yellow"><a href="http://extranet.glu.com/msgames/" class="hoverlink" title="Extranet for EMEA clients">extranet (EMEA)</a></li>
+					<li class="libox yellow"><a href="http://extranet.glu.com/msgames/" class="hoverlink" title="Extranet for APAC clients">extranet (APAC)</a></li>
+					<li class="libox yellow"><a href="/about/press_room.php" class="hoverlink">press room</a></li>
 				</ul>
 			</div>
 		</td>
 	</tr>
 	<tr align="left" valign="top">
-		<td class="boxbottom_short_short"><img src="/img/spacer.gif" width="185" height="25" alt="" border="0" hspace="0" vspace="0" align="left"></td>
+		<td class="boxbottom_short_short"><img src="..//img/spacer.gif" width="185" height="25" alt=" " border="0" hspace="0" vspace="0" align="left"></td>
 	</tr>
 </tbody></table>
+
 		</td>
 		<!-- End Left Column -->
 		<td width="20"><img src="/img/spacer.gif" width="20" height="20" alt="" border="0" hspace="0" vspace="0" align="left"></td>
@@ -123,29 +123,33 @@ urchinTracker();
 	</tr>
 </tbody></table>
 		<!-- End Content -->
-		
+			
 		<!-- Begin Footer -->
 		<table border="0" width="910" cellspacing="0" cellpadding="0" id="footer">
 			<tbody><tr align="left" valign="top">
-				<td><img src="/img/spacer.gif" width="910" height="20" alt="" border="0" hspace="0" vspace="0" align="right"></td>
+				<td><img src="/img/spacer.gif" width="910" height="20" alt=" " border="0" hspace="0" vspace="0" align="right"></td>
 			</tr>
 			<tr align="left" valign="top">
-				<td><a href="/about/copyright.jsp" class="bottomnav">copyright</a> <span class="yellow">|</span> <a href="/about/terms.jsp" class="bottomnav">terms</a> <span class="yellow">|</span> <a href="/about/privacy_policy.jsp" class="bottomnav">privacy policy</a></td>
+				<td>
+					<a href="/about/copyright.php" class="bottomnav">copyright</a> <span class="yellow">|</span> 
+					<a href="/about/terms.php" class="bottomnav">terms</a> <span class="yellow">|</span> 
+					<a href="/about/privacy_policy.php" class="bottomnav">privacy policy</a>
+				</td>
 			</tr>
 			<tr align="left" valign="top">
-				<td><img src="/img/spacer.gif" width="910" height="5" alt="" border="0" hspace="0" vspace="0" align="right"></td>
+				<td><img src="/img/spacer.gif" width="910" height="5" alt=" " border="0" hspace="0" vspace="0" align="right"></td>
 			</tr>
 			<tr align="left" valign="top">
-				<td class="note">© Copyright 2002-2005 Glu Mobile. All Rights Reserved.</td>
+				<td class="note">© Copyright 2002-2006 Glu Mobile. All Rights Reserved.</td>
 			</tr>
 			<tr align="left" valign="top">
-				<td><img src="/img/spacer.gif" width="910" height="5" alt="" border="0" hspace="0" vspace="0" align="right"></td>
+				<td><img src="/img/spacer.gif" width="910" height="5" alt=" " border="0" hspace="0" vspace="0" align="right"></td>
 			</tr>
 			<tr align="left" valign="top">
 				<td style="font-size: 9px">Site design by <a href="http://www.saltbranding.com/">SALT Branding</a></td>
 			</tr>
 		</tbody></table><table>
 		<!-- End Footer -->
-
 	
+
 </table></a></body></html>
