--- a/c/cr/cre/creditcards.com.html
+++ b/c/cr/cre/creditcards.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the creditcards.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231225430id_/http%3A//www.creditcards.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the creditcards.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615053011id_/http%3A//creditcards.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>Privacy - CreditCards.com</title>
@@ -11,7 +11,7 @@
 <meta name="distribution" content="global">
 <meta http-equiv="Pragma" content="no-cache">
 <meta name="author" content="CreditCards.com">
-<meta name="copyright" content="® 2005 CreditCards.com">
+<meta name="copyright" content="® 2006 CreditCards.com">
 
 <link rel="stylesheet" href="/css/credit-cards.css" type="text/css">
 <script src="/javascript/application.js"></script>
@@ -26,32 +26,24 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 </head> 
 
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" link="#003399" alink="#CC0000" vlink="#003399">
-<!--  CreditCards.com topbar here --><!-- #BeginLibraryItem "/Library/credit-card-topbar.lbi" --><table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#FFFFFF">
+<!--  CreditCards.com topbar here --><!-- #BeginLibraryItem "/Library/credit-card-topbar.lbi" --><table width="790" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" class="topbar">
   <tbody><tr>
-    <td>
-      <div align="left"><a href="/index.php"><img src="/images/credit-cards.gif" width="362" height="113" border="0" alt="Credit Cards"></a></div>
+    <td width="46%" background="/images/top-bg-spacer.gif">
+      <div align="left"><a href="/index.php"><img src="/images/credit-cards-logo.gif" alt="Credit Cards" width="362" height="85" border="0"></a></div>
     </td>
-    <td width="100%" background="/images/Credit-Cards-com-Spacer.gif"></td>
-    <td valign="top">
-      <div align="right"><img src="/images/credit-card-offer-r.gif" alt="Search, Compare &amp; Apply for Credit Card Offers - Visa, Mastercard, American Express and Discover" width="202" height="113" border="0" usemap="#Map"></div>
-    </td>
+    <td width="15%" background="/images/top-bg-spacer.gif"></td>
+    <td width="39%" align="right" valign="top" background="/images/top-bg-spacer.gif">
+	
+          <img src="/images/credit-card-offer-r2.gif" alt="Search, Compare and Apply for a Credit Card" width="202" height="85"></td>
   </tr>
-</tbody></table>
-<map name="Map">
-  <area shape="rect" coords="124,97,189,117" href="/index.php" alt="Credit Cards Home Page">
-</map><!-- #EndLibraryItem --><!--Credit Cards menu starts here -->
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
+</tbody></table><!-- #EndLibraryItem --><!--Credit Cards menu starts here -->
+<table width="790" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF">
   <tbody><tr> 
-    <td valign="top"><!-- #BeginLibraryItem "/Library/credit-cards-leftnav.lbi" --><table width="191" border="0" cellpadding="0" cellspacing="0">
-   <tbody><tr> 
-    <td><img src="/images/10-10-spacer.gif"></td>
-  </tr>
-  <tr> 
+    <td width="191" class="mainLeftNav" valign="top"><!-- #BeginLibraryItem "/Library/credit-cards-leftnav.lbi" --><table width="191" border="0" cellpadding="0" cellspacing="0" bgcolor="#dae4ee">
+  <tbody><tr> 
     <td>
       
-        <div align="right"><img src="/images/menu.gif" width="191" height="31" alt="Credit Cards Menu"></div>
-     
-    </td>
+        <div align="right"><img src="/images/menu.gif" width="191" height="31" alt="Credit Cards Menu"></div>    </td>
   </tr>
   <tr> 
     <td class="leftnav"><img src="/images/bb.gif" width="15" height="8"><a href="/low-interest.php">Low 
@@ -59,7 +51,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   </tr>
   <tr> 
     <td class="leftnav"><img src="/images/bb.gif" width="15" height="8"><a href="/balance-transfer.php">Balance 
-      Transfer Cards</a></td>
+      Transfer Cards</a></td> 
   </tr>
   <tr> 
     <td class="leftnav"><img src="/images/bb.gif" width="15" height="8"><a href="/instant-approval.php">Instant 
@@ -97,7 +89,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       Card Specials</a></td>
   </tr>
   <tr> 
-    <td class="leftnav"><img src="/images/10-10-spacer.gif" width="10" height="25"></td>
+    <td class="leftnav"><img src="/images/10-10-spacer.gif" width="10" height="10"></td>
   </tr>
   <tr> 
     <td><div align="right"><a href="/bank.php"><img src="/images/bank-credit-cards.gif" alt="Bank Credit Cards" width="191" height="31" border="0"></a></div></td>
@@ -124,7 +116,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       </a> </td>
   </tr>
   <tr> 
-    <td class="leftnav"><img src="/images/bb.gif" width="15" height="8" border="0"><a href="/first-premier.php">First Premier 
+    <td class="leftnav"><img src="/images/bb.gif" width="15" height="8" border="0"><a href="/first-premier.php">First Premier Bank 
       </a> </td>
   </tr>
   
@@ -140,13 +132,34 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       </a> </td>
   </tr>
    <tr> 
-    <td class="leftnav"><img src="/images/10-10-spacer.gif" width="10" height="25"></td>
+    <td class="leftnav"><img src="/images/10-10-spacer.gif" width="10" height="10"></td>
   </tr>
  
   <tr> 
     <td>
-      <div align="right"><img src="/images/credit-cards-resource-center.gif" alt="Credit Cards Resource Center" width="191" height="30"></div>
-    </td>
+      <div align="right"><img src="/images/search-by-keyword.gif" alt="Search CreditCards.com by Keyword" width="191" height="31"></div>    </td>
+  </tr>
+  <tr> 
+    <td class="leftnavsearch"><form action="/search/results.php" method="post">
+	<input name="query_string" type="text" value="" size="17" maxlength="50" class="searchbox">
+			<br>
+          <input type="hidden" name="path" value="">
+          <input type="hidden" name="refine" value="0">
+          <input type="hidden" name="cctem" value="cc.php">
+          <input type="hidden" name="result_page" value="/search/results.php">
+	      <input type="hidden" name="site" value=""> 
+		  <!--<input type='hidden' name='option' value='exact'/>-->
+			<input type="submit" name="search" value="Search">
+    </form></td>
+  </tr>
+
+   <tr> 
+    <td class="leftnav"><img src="/images/10-10-spacer.gif" width="10" height="10"></td>
+  </tr>
+ 
+  <tr> 
+    <td>
+      <div align="right"><img src="/images/credit-card-resources.gif" alt="Credit Cards Resource Center" width="191" height="31"></div>    </td>
   </tr>
   <tr> 
     <td class="leftnav"><img src="/images/bb.gif" width="15" height="8"><a href="/credit-card-articles.php">Credit 
@@ -167,7 +180,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       Card Newsletter</a></td>
   </tr>
   <tr> 
-    <td><div align="right"><img src="/images/Credit-Cards-com-Fader-191x46.gif" alt="Online Credit Card Applications" width="191" height="28"></div></td>
+    <td><div align="right"><img src="/images/Credit-Cards-com-Fader-191x46.gif" alt="Online Credit Card Applications" width="191" height="10"></div></td>
+  </tr>
+  <tr> 
+    <td>&nbsp;</td>
   </tr>
 </tbody></table>
 <!-- #EndLibraryItem --></td>
@@ -197,54 +213,24 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
     <!--  CreditCards.com column 3 -->
 </tr></tbody></table>
 <!--  CreditCards.com  botnav begins here --><!-- #BeginLibraryItem "/Library/credit-cards-botnav.lbi" -->
-<script language="JavaScript">
-<!--
-function MM_openBrWindow(theURL,winName,features) { //v2.0
-  window.open(theURL,winName,features);
-}
-//-->
-</script>
 
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
+<table width="790" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#dae4ee" class="bottomnav1">
   <tbody><tr>
-    <td><img src="/images/1-1-spacer.gif" width="190" height="1"></td>
-    <td> 
-      <table width="90%" border="0" cellspacing="0" cellpadding="0" align="center">
-        <tbody><tr> 
-          <td> 
-            <p align="left">
-			
-<a href="javascript:;" onclick="MM_openBrWindow('/SSL-Security.php','','scrollbars=yes,resizable=yes,width=400,height=350')">
-              <img src="/images/Security-Lock.gif" width="10" height="13" border="0" alt="Security Info"></a> 
-              Security Note: All Applications linked to on this site feature Secure 
-              SSL Technology.</p>
-          </td>
-        </tr>
-      </tbody></table>
-    </td>
-  </tr>
-  <tr>
     <td>&nbsp;</td>
-    <td><img src="/images/500spacer.gif" width="560" height="1"></td>
   </tr>
 </tbody></table>
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr>
-    <td background="/images/credit-card-bot-nav.gif"><img src="/images/1-1-spacer.gif" width="1" height="13
-	
-	
-	"></td>
-  </tr>
-  <tr>
-    <td bgcolor="#FFFFFF"><img src="/images/1-1-spacer.gif" width="1" height="1"></td>
-  </tr>
-</tbody></table>
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
+
+<table width="790" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#dae4ee" class="bottomnav3">
   <tbody><tr> 
-    <!--  CreditCards.com Column 2 -->
     <td valign="top"> 
       <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
-        <tbody><tr> 
+        <tbody><tr>
+        		<td class="bottomnav"><div align="center" class="sslcopy"><a href="SSL-Security.php"><img src="images/Security-Lock.gif" alt="Security Info" width="18" height="19" border="0"></a> Security Note: All Applications  feature Secure SSL Technology.</div></td>
+        		</tr>
+        <tr>
+        		<td class="bottomnav">&nbsp;</td>
+        		</tr>
+        <tr> 
           <td class="bottomnav"> 
             <div align="center">
               <a href="/terms.php" class="bottomnav">Terms &amp; Conditions</a> &nbsp;|&nbsp; 
@@ -254,11 +240,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 			  <a href="/index.php" class="bottomnav">Home Page</a> &nbsp;|&nbsp;
 			  <a href="/site-map.php" class="bottomnav">Site Map</a><span class="bottomnav"><br>
             <br>
-            © Copyright 2005 Credit Cards.com</span></div>
-		  </td>
+            © Copyright 2006 Credit Cards.com</span></div>		  </td>
         </tr>
+		<tr>
+			<td>&nbsp;</td>
+		</tr>
       </tbody></table>
     </td>
 </tr></tbody></table><!-- #EndLibraryItem --><img src="http://www.creditcards.com/sb.php?a_aid=999&amp;a_bid=36" border="0" width="1" height="1">
+<img src="http://www.creditcards.com/xtrack.php?" border="0" width="1" height="1">
 
 </body></html>
