--- a/t/tr/tra/traillink.com.html
+++ b/t/tr/tra/traillink.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the traillink.com privacy policy that was archived on 2005-11-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051115034926id_/http%3A//www.traillink.com/TL_info/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the traillink.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615054220id_/http%3A//traillink.com/TL_info/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <style><!-- a:link {color: #003399;text-decoration: none} a:visited {color: #003399;text-decoration: none} a:hover {color: #FF0000; text-decoration: underline}--></style>
@@ -168,11 +168,11 @@ Right margin, if necessary
 	<tr>
 	<td></td>
 	<td align="center" colspan="2">		
-		<a href="mailto:katie@railtrails.org"><font face="verdana,arial,helvetica,sans serif" size="1" color="#808080">Contact&nbsp;Us</font></a>
+		<a href="mailto:kelly@railtrails.org"><font face="verdana,arial,helvetica,sans serif" size="1" color="#808080">Contact&nbsp;Us</font></a>
 		&nbsp;|<a href="/TL_info/privacy.asp"><font face="verdana,arial,helvetica,sans serif" size="1" color="#808080"> Privacy Policy</font></a><font face="verdana,arial,helvetica,sans serif" size="1" color="#808080">
 		</font>&nbsp;|&nbsp;<a href="/TL_info/security.asp">
 		<font face="verdana,arial,helvetica,sans serif" size="1" color="#808080">Security</font></a>&nbsp;|&nbsp;<a href="/TL_info/visitoragree.asp">
-		<font face="verdana,arial,helvetica,sans serif" size="1" color="#808080">Visitor Agreement</font></a>&nbsp;<br>&nbsp;<br><font face="verdana,arial,helvetica,sans serif" size="1" color="#808080">Copyright © 2005 <a href="http://www.railtrails.org">
+		<font face="verdana,arial,helvetica,sans serif" size="1" color="#808080">Visitor Agreement</font></a>&nbsp;<br>&nbsp;<br><font face="verdana,arial,helvetica,sans serif" size="1" color="#808080">Copyright © 2006 <a href="http://www.railtrails.org">
 		<font face="verdana,arial,helvetica,sans serif" size="1" color="#808080"><b>Rails-to-Trails Conservancy</b></font></a> (RTC). All rights reserved.
 		<br><a href="http://www.railtrails.org"><font face="verdana,arial,helvetica,sans serif" size="1" color="#808080"><b>Rails-to-Trails Conservancy</b>
 		</font></a>, 1100 17th Street, NW, Washington, D.C. 20036</font>
