--- a/r/ri/rin/ringcentral.com.html
+++ b/r/ri/rin/ringcentral.com.html
@@ -1,9 +1,12 @@
-<!--The following is the downloaded HTML source of the ringcentral.com privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214235933id_/http%3A//www.ringcentral.com/privacy-policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ringcentral.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615054942id_/http%3A//www.ringcentral.com/privacy-policy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>RINGCENTRAL SERVICE PRIVACY POLICY</title>
+<title>RINGCENTRAL SERVICE PRIVACY POLICY: Internet Fax, Call Forwarding, Toll-free number, Voice mail</title>
+<meta name="description" content="Privacy Policy of RingCentral: Toll-free number, Internet Fax, Voice mail Services">
+<!-- InstanceEndEditable --><!-- InstanceBeginEditable name="MetaKeywords" -->
+<meta name="keywords" content="internet fax, call forwarding, Voice mail, toll-free number">
 <link href="/css/cntstyles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
